k8s.yaml
#########################################################
# Service for Moleculer API Gateway service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - port: 3000
    targetPort: 3000

---
#########################################################
# Ingress for Moleculer API Gateway
#########################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sws.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3000

---
#########################################################
# API Gateway service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: sws
        imagePullPolicy: Never
---
#########################################################
# SWS API service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swsapi
spec:
  selector:
    matchLabels:
      app: swsapi
  replicas: 2
  template:
    metadata:
      labels:
        app: swsapi
    spec:
      containers:
      - name: swsapi
        image: sws
        imagePullPolicy: Never
---
#########################################################
# Scraper service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
spec:
  selector:
    matchLabels:
      app: scraper
  replicas: 2
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: scraper
        image: sws
        imagePullPolicy: Never
---
#########################################################
# NATS transporter service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
  - port: 4222
    name: nats
    targetPort: 4222

---
#########################################################
# NATS transporter
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  selector:
    matchLabels:
      app: nats
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats
        ports:
        - containerPort: 4222
          name: nats
